feat: group upsert by name
